--- a/fluxus-Info.plist
+++ b/fluxus-Info.plist
@@ -7,14 +7,14 @@
 	<key>CFBundleExecutable</key>
 	<string>fluxus</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.fluxus</string>
+	<string>org.pawfal.fluxus</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>FLUX</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>0.8</string>
 </dict>
 </plist>
