--- a/libfluxus/SConscript
+++ b/libfluxus/SConscript
@@ -34,7 +34,8 @@ Source = Split("src/PData.cpp \
 		src/SearchPaths.cpp \
 		src/GLSLShader.cpp \
 		src/ShadowVolumeGen.cpp \
-		src/Physics.cpp")
+		src/Physics.cpp \
+		src/Utils.cpp")
 		
 env.StaticLibrary(source = Source, target = Target)
 
