added skinning stuff

--- a/libfluxus/SConscript
+++ b/libfluxus/SConscript
@@ -39,6 +39,9 @@ Source = Split("src/PData.cpp \
 		src/DepthSorter.cpp \
 		src/PrimitiveFunction.cpp \
 		src/ArithmeticPrimFunc.cpp \
+		src/GenSkinWeightsPrimFunc.cpp \
+		src/SkinWeightsToVertColsPrimFunc.cpp \
+		src/SkinningPrimFunc.cpp \
 		src/Utils.cpp")
 		
 env.StaticLibrary(source = Source, target = Target)
