--- a/modules/scheme/SConscript
+++ b/modules/scheme/SConscript
@@ -10,8 +10,7 @@ Scripts    = ["scratchpad-boot.scm",
 			  "scratchpad.ss", 
 			  "scratchpad-input.ss",
 			  "scratchpad-camera.ss",
-			  "fluxus-obj-import.ss",
-			  "Bitstream-Vera-Sans-Mono.ttf" ]
+			  "fluxus-obj-import.ss" ]
 
 Install        = CollectsInstall
 
