neat anitaliased text from gabor, simpler drscheme usage

--- a/modules/SConscript
+++ b/modules/SConscript
@@ -5,9 +5,9 @@
 
 Import("env", "CollectsInstall", "MZDYN")
 
-BinaryModulesLocation = CollectsInstall + "/extensions"
+#BinaryModulesLocation = CollectsInstall + "/extensions"
 # todo run mzscheme to get (path->string (system-library-subpath))
-#BinaryModulesLocation = CollectsInstall + "/"#compiled/native/i386-linux/3m"
+BinaryModulesLocation = CollectsInstall + "/compiled/native/i386-linux/3m"
 
 SConscript(dirs = ["fluxus-engine", 
                    "fluxus-audio", 
