--- a/modules/material/SConscript
+++ b/modules/material/SConscript
@@ -2,7 +2,7 @@
 # SConscript for fluxus material
 
 import os	 
-Import("env", "CollectsInstall")
+Import("env", "DataInstall")
 
 Shaders    = ["shaders/simple.frag.glsl",
               "shaders/simple.vert.glsl",
@@ -35,16 +35,17 @@ Textures =   ["textures/gradient.png",
               "textures/smoke.png",  
               "textures/test.png",
               "textures/track.png",
-              "textures/transp.png"]
+              "textures/transp.png",
+			  "textures/octopus.png"]
 
 Meshes =      ["meshes/bot.obj"]
 
 Fonts =      ["fonts/Bitstream-Vera-Sans-Mono.ttf"]
 
-InstallShaders = CollectsInstall+"/material/shaders"
-InstallTextures = CollectsInstall+"/material/textures"
-InstallMeshes = CollectsInstall+"/material/meshes"
-InstallFonts = CollectsInstall+"/material/fonts"
+InstallShaders = DataInstall+"/material/shaders"
+InstallTextures = DataInstall+"/material/textures"
+InstallMeshes = DataInstall+"/material/meshes"
+InstallFonts = DataInstall+"/material/fonts"
 
 env.Install(InstallShaders, Shaders)
 env.Install(InstallTextures, Textures)
