fixed archpath problem

--- a/modules/SConscript
+++ b/modules/SConscript
@@ -3,11 +3,14 @@
 #
 # Sets up common stuff, and calls each module SConscript 
 
+import os 
 Import("env", "CollectsInstall", "DataInstall", "MZDYN")
 
-#BinaryModulesLocation = CollectsInstall + "/extensions"
-# todo run mzscheme to get (path->string (system-library-subpath))
-BinaryModulesLocation = CollectsInstall + "/compiled/native/i386-linux/3m"
+# run mzscheme to get (path->string (system-library-subpath))
+file = os.popen("mzscheme -em \"(begin (display (path->string (system-library-subpath)))(exit))\"")
+archpath = file.read()
+
+BinaryModulesLocation = CollectsInstall + "/compiled/native/"+archpath
 
 SConscript(dirs = ["fluxus-engine", 
                    "fluxus-audio", 
