--- a/modules/fluxus-osc/SConscript
+++ b/modules/fluxus-osc/SConscript
@@ -5,7 +5,7 @@
 
 Import("env", "BinaryModulesLocation", "MZDYN")
 
-Target = "fluxus-osc.so"
+Target = "fluxus-osc_ss.so"
 Install = BinaryModulesLocation
 Libs = Split("lo")
 
