--- a/modules/material/SConscript
+++ b/modules/material/SConscript
@@ -40,7 +40,8 @@ Textures =   ["textures/gradient.png",
 Meshes =      ["meshes/bot.obj", 
 			   "meshes/alien.obj",
 			   "meshes/rocket.obj",
-			   "meshes/mushroom.obj"]
+			   "meshes/mushroom.obj",
+			   "meshes/widget.obj"]
 
 Fonts =      ["fonts/Bitstream-Vera-Sans-Mono.ttf"]
 
