--- a/libfluxus/SConscript
+++ b/libfluxus/SConscript
@@ -47,7 +47,10 @@ Source = Split("src/PData.cpp \
 		src/Trace.cpp \
 		src/PrimitiveIO.cpp \
 		src/PixelPrimitiveIO.cpp \
-		src/OBJPrimitiveIO.cpp")
-		
+		src/OBJPrimitiveIO.cpp \
+		src/Evaluator.cpp \
+		src/Geometry.cpp \
+		src/PolyEvaluator.cpp")
+				
 env.StaticLibrary(source = Source, target = Target)
 
