--- a/modules/SConscript
+++ b/modules/SConscript
@@ -1,3 +1,4 @@
+# -*- mode: python -*-
 ###############################################################
 # Top level SConscript for the fluxus PLT modules
 #
