fixed dInitODE2 detection and linked fluxus-engine with freetype

--- a/modules/fluxus-engine/SConscript
+++ b/modules/fluxus-engine/SConscript
@@ -12,7 +12,7 @@ else:
 		Target = "fluxus-engine_ss.so"
 
 Install = BinaryModulesLocation
-Libs = Split("GLEW fluxus png ode tiff jpeg")
+Libs = Split("GLEW fluxus png ode tiff jpeg freetype")
 if env['PLATFORM'] != 'darwin':
 	    Libs += Split("GL GLU glut")
 
