--- a/fluxa/SConscript
+++ b/fluxa/SConscript
@@ -6,7 +6,7 @@
 
 Import("env", "BinInstall")
 
-Target       = "fluxa"
+Target       = "fluxa-0.16"
 Install      = BinInstall
 Libs = Split("m sndfile jack lo")
 
