--- a/modules/material/SConscript
+++ b/modules/material/SConscript
@@ -10,7 +10,7 @@ Shaders    = ["shaders/simple.frag.glsl",
               "shaders/blinn.vert.glsl",    
               "shaders/lambert.frag.glsl",
               "shaders/lambert.vert.glsl",
-			  "shaders/wrapped.frag.glsl",
+              "shaders/wrapped.frag.glsl",
               "shaders/wrapped.vert.glsl",
               "shaders/facingratio.frag.glsl",  
               "shaders/facingratio.vert.glsl", 
@@ -19,15 +19,15 @@ Shaders    = ["shaders/simple.frag.glsl",
               "shaders/toon.frag.glsl",
               "shaders/toon.vert.glsl",
               "shaders/aniso.frag.glsl",
-			  "shaders/aniso.vert.glsl",
+              "shaders/aniso.vert.glsl",
               "shaders/badprint.frag.glsl",
-			  "shaders/badprint.vert.glsl",
+              "shaders/badprint.vert.glsl",
               "shaders/glossy.frag.glsl",
-			  "shaders/glossy.vert.glsl",
+              "shaders/glossy.vert.glsl",
               "shaders/gooch.frag.glsl",
-			  "shaders/gooch.vert.glsl",
+              "shaders/gooch.vert.glsl",
               "shaders/wood.frag.glsl",
-			  "shaders/wood.vert.glsl"]
+              "shaders/wood.vert.glsl"]
 
 Textures =   ["textures/gradient.png",
               "textures/green.png",
@@ -35,15 +35,15 @@ Textures =   ["textures/gradient.png",
               "textures/smoke.png",  
               "textures/test.png",
               "textures/track.png",
-              "textures/transp.png"
-			  "textures/lights.png"]
+              "textures/transp.png",
+              "textures/lights.png"]
 
 Meshes =      ["meshes/bot.obj", 
-			   "meshes/alien.obj",
-			   "meshes/rocket.obj",
-			   "meshes/mushroom.obj",
-			   "meshes/widget.obj",
-			   "meshes/octopus.obj"]
+               "meshes/alien.obj",
+               "meshes/rocket.obj",
+               "meshes/mushroom.obj",
+               "meshes/widget.obj",
+               "meshes/octopus.obj"]
 
 Fonts =      ["fonts/Bitstream-Vera-Sans-Mono.ttf"]
 
