added scotts tasks, removed hooks, added timed-tasks and updated fluxa to use these

--- a/modules/scheme/SConscript
+++ b/modules/scheme/SConscript
@@ -18,6 +18,7 @@ Scripts    = ["boot.scm",
 			  "randomness.ss",
 			  "frisbee.ss",
 			  "fluxa.ss",
+			  "tasks.ss",
 			  "time.ss",
 			  "gui.ss",
 			  "joylisten.ss",
