--- a/modules/material/SConscript
+++ b/modules/material/SConscript
@@ -35,7 +35,7 @@ Textures =   ["textures/gradient.png",
               "textures/smoke.png",  
               "textures/test.png",
               "textures/track.png",
-              "textures/transp.png"
+              "textures/transp.png",
 			  "textures/lights.png"]
 
 Meshes =      ["meshes/bot.obj", 
