--- a/modules/fluxus-osc/SConscript
+++ b/modules/fluxus-osc/SConscript
@@ -3,12 +3,14 @@
 #
 # This is the main PLT module for the fluxus osc functions
 
-Import("env", "BinaryModulesLocation", "MZDYN")
+Import("env", "BinaryModulesLocation", "MZDYN", "static_modules")
 
 if env['PLATFORM'] == 'darwin':
 	Target = "fluxus-osc_ss.dylib"
 else:
 	Target = "fluxus-osc_ss.so"
+
+if static_modules: Target = "fluxus-osc_ss"
 
 Install = BinaryModulesLocation
 Libs = Split("lo")
@@ -18,9 +20,14 @@ Source = Split("src/FluxusOSC.cpp \
 		src/OSCCore.cpp") + \
 		[MZDYN]
 
-env.SharedLibrary(source = Source, 
+if static_modules:
+	env.StaticLibrary(source = Source, 
+				  target = Target,
+				  LIBS = Libs)
+else:
+	env.SharedLibrary(source = Source, 
 				  target = Target,
 				  LIBS = Libs,
 				  SHLIBPREFIX = "")
 						 
-env.Install(Install, Target)
+if not static_modules: env.Install(Install, Target)
