--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 CFLAGS = -Wall -g
 
@@ -21,7 +21,9 @@ build: build-stamp
 
 build-stamp: configure-stamp 
 	dh_testdir
-	scons Prefix=/usr STATIC_MODULES=1
+	export PATH=$(PATH):/usr/local/bin
+	echo $(PATH)
+	scons Prefix=/usr PLTPrefix=/usr STATIC_MODULES=1
 	touch build-stamp
 
 clean:
@@ -30,7 +32,7 @@ clean:
 	rm -f config.log
 	rm -f build-stamp configure-stamp
 	# Add here commands to clean up after the build process.
-	scons -c
+	scons -c Prefix=/usr PLTPrefix=/usr STATIC_MODULES=1
 	rm -rf .sconf_temp/
 	rm -f .sconsign src/.sconsign libfluxus/src/.sconsign libfluxphysics/src/.sconsign
 	rm -f .sconsign.dblite
@@ -45,7 +47,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/fluxus.
-	scons Prefix=/usr DESTDIR=debian/fluxus STATIC_MODULES=1 install
+	scons Prefix=/usr PLTPrefix=/usr DESTDIR=debian/fluxus STATIC_MODULES=1 install
 
 # Build architecture-independent files here.
 binary-indep: build install
