--- a/libfluxus/SConscript
+++ b/libfluxus/SConscript
@@ -55,7 +55,8 @@ Source = Split("src/PData.cpp \
 		src/Noise.cpp \
 		src/SimplexNoise.cpp \
 		src/TiledRender.cpp \
-		src/ImagePrimitive.cpp"
+		src/ImagePrimitive.cpp \
+		src/FFGLManager.cpp"
 		)
 				
 env.StaticLibrary(source = Source, target = Target)
